--- a/SourceCode/about.html
+++ b/SourceCode/about.html
@@ -26,9 +26,9 @@
 						<!-- Logo -->
 						<div class="logo_container">
 							<div class="logo">
-								<div>destino</div>
-								<div>travel agency</div>
-								<div class="logo_image"><img src="images/logo.png" alt=""></div>
+								<div>Travel Explorer</div>
+								<div>Make memories around the world</div>
+								<!--<div class="logo_image"><img src="images/logo.png" alt=""></div>-->
 							</div>
 						</div>
 
