--- a/SourceCode/contact.html
+++ b/SourceCode/contact.html
@@ -14,9 +14,7 @@
 <body>
 
 <div class="super_container">
-	
 	<!-- Header -->
-
 	<header class="header">
 		<div class="container">
 			<div class="row">
@@ -26,9 +24,9 @@
 						<!-- Logo -->
 						<div class="logo_container">
 							<div class="logo">
-								<div>destino</div>
-								<div>travel agency</div>
-								<div class="logo_image"><img src="images/logo.png" alt=""></div>
+								<div>Travel Explorer</div>
+								<div>Make memories around the world</div>
+								<!--<div class="logo_image"><img src="images/logo.png" alt=""></div>-->
 							</div>
 						</div>
 
@@ -183,7 +181,7 @@
 <script src="plugins/greensock/ScrollToPlugin.min.js"></script>
 <script src="plugins/easing/easing.js"></script>
 <script src="plugins/parallax-js-master/parallax.min.js"></script>
-<script src="https://maps.googleapis.com/maps/api/js?v=3.exp&key=AIzaSyCIwF204lFZg1y4kPSIhKaHEXMLYxxuMhA"></script>
+<script src="https://maps.googleapis.com/maps/api/js?v=3.exp&key=AIzaSyD9bw3TJ7-Pg_Ah72NDteupHvciB5tlDI8"></script>
 <script src="js/contact_custom.js"></script>
 </body>
 </html>
