--- a/SourceCode/index.html
+++ b/SourceCode/index.html
@@ -36,9 +36,9 @@
 						<!-- Logo -->
 						<div class="logo_container">
 							<div class="logo">
-								<div>destino</div>
-								<div>travel agency</div>
-								<div class="logo_image"><img src="images/logo.png" alt=""></div>
+								<div>Travel Explorer</div>
+								<div>Make memories around the world</div>
+								<!--<div class="logo_image"><img src="images/logo.png" alt=""></div>-->
 							</div>
 						</div>
 
@@ -73,8 +73,8 @@
 		<div class="home_background" style="background-image:url(images/home.jpg)"></div>
 		<div class="home_content">
 			<div class="home_content_inner">
-				<div class="home_text_large">discover</div>
-				<div class="home_text_small">Discover new worlds</div>
+				<!--<div class="home_text_large">discover</div>-->
+				<div class="home_text_small">Travel Explorer</div>
 			</div>
 		</div>
 	</div>
@@ -87,14 +87,15 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-12">
-					<div class="find_title text-center">Find the Adventure of a lifetime</div>
+					<div class="find_title text-center">Make Memories Around The World
+					</div>
 				</div>
 				<div class="col-12">
 					<div class="find_form_container">
 						<form action="#" id="find_form" class="find_form d-flex flex-md-row flex-column align-items-md-center align-items-start justify-content-md-between justify-content-start flex-wrap">
 							<div class="find_item">
 								<div>Destination:</div>
-								<input type="text" class="destination find_input" required="required" placeholder="Keyword here">
+								<input type="text" class="destination find_input" required="required" placeholder="">
 							</div>
 							<div class="find_item">
 								<div>From</div>
@@ -106,14 +107,16 @@
 							</div>
 							<div class="find_item">
 								<div>Budget</div>
-								<input type="number" class="destination find_input" required="required" placeholder="Keyword here">
+								<input type="number" class="destination find_input" required="required" placeholder="">
 							</div>
 							<div class="find_item">
 								<div>Interest</div>
 								<select name="max_price" id="max_price" class="dropdown_item_select find_input">
-									<option>&nbsp;</option>
-									<option>Price</option>
-									<option>Price</option>
+									<option>Select</option>
+									<option>Adventure</option>
+									<option>Devotional</option>
+									<option>Scenic</option>
+									<option>Party</option>
 								</select>
 							</div>
 							<button class="button find_button">Find</button>
