--- a/SourceCode/contact.html
+++ b/SourceCode/contact.html
@@ -24,9 +24,11 @@
 						<!-- Logo -->
 						<div class="logo_container">
 							<div class="logo">
-								<div>Travel Explorer</div>
+								<!--<div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Travel Explorer</div>-->
+								<div class="logo_image"><img src="images/tile-wide.png" alt=""></div>
+								<br>
 								<div>Make memories around the world</div>
-								<!--<div class="logo_image"><img src="images/logo.png" alt=""></div>-->
+
 							</div>
 						</div>
 
@@ -56,7 +58,7 @@
 
 	<div class="home">
 		<!-- Image by https://unsplash.com/@peecho -->
-		<div class="home_background parallax-window" data-parallax="scroll" data-image-src="images/news.jpg" data-speed="0.8"></div>
+		<div class="home_background parallax-window" data-parallax="scroll" data-image-src="images/tst2.jpg" data-speed="0.8"></div>
 		<div class="container">
 			<div class="row">
 				<div class="col">
