--- a/SourceCode/index.html
+++ b/SourceCode/index.html
@@ -36,9 +36,11 @@
 						<!-- Logo -->
 						<div class="logo_container">
 							<div class="logo">
-								<div>Travel Explorer</div>
+								<!--<div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Travel Explorer</div>-->
+								<div class="logo_image"><img src="images/tile-wide.png" alt=""></div>
+								<br>
 								<div>Make memories around the world</div>
-								<!--<div class="logo_image"><img src="images/logo.png" alt=""></div>-->
+
 							</div>
 						</div>
 
@@ -48,7 +50,7 @@
 								<li class="main_nav_item active"><a href="#">Home</a></li>
 								<li class="main_nav_item"><a href="about.html">About us</a></li>
 								<li class="main_nav_item"><a href="contact.html">Contact</a></li>
-								<li class="main_nav_item" onclick="signOut();"><a href="#" >Sign Out</a></li>
+								<li class="main_nav_item" onclick="signOut();"><a href="LoginPage.html" >Sign Out</a></li>
 							</ul>
 						</nav>
 						<script src="https://apis.google.com/js/platform.js?onload=onLoad" async defer></script>
@@ -70,7 +72,7 @@
 	<!-- Home -->
 
 	<div class="home">
-		<div class="home_background" style="background-image:url(images/home.jpg)"></div>
+		<div class="home_background" style="background-image:url(images/tst2.jpg)"></div>
 		<div class="home_content">
 			<div class="home_content_inner">
 				<!--<div class="home_text_large">discover</div>-->
@@ -83,7 +85,7 @@
 
 	<div class="find">
 		<!-- Image by https://unsplash.com/@garciasaldana_ -->
-		<div class="find_background parallax-window" data-parallax="scroll" data-image-src="images/find.jpg" data-speed="0.8"></div>
+		<div class="find_background parallax-window" data-parallax="scroll" data-image-src="images/newsletter.jpg" data-speed="0.8"></div>
 		<div class="container">
 			<div class="row">
 				<div class="col-12">
