Updating Contact and About us page and also making changes to some CSS.

--- a/SourceCode/contact.html
+++ b/SourceCode/contact.html
@@ -25,7 +25,7 @@
 						<div class="logo_container">
 							<div class="logo">
 								<!--<div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Travel Explorer</div>-->
-								<div class="logo_image"><img src="images/tile-wide.png" alt=""></div>
+								<div class="logo_image"><img src="images/Travel_Explorer.png" alt=""></div>
 								<br>
 								<div>Make memories around the world</div>
 
@@ -100,39 +100,59 @@
 			<div class="row contact_content">
 				<div class="col-lg-5">
 					<div class="contact_text">
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce fringilla lectus nec diam auctor, ut fringilla diam sagittis. Quisque vel est id justo faucibus dapibus id a nibh. Aenean suscipit consequat lacus, sit amet mollis nulla. Morbi sagittis orci id lacus convallis tempus eget sit amet metus.</p>
+						<p></p>
 					</div>
 					<div class="contact_info">
 						<div class="contact_info_box">i</div>
 						<div class="contact_info_container">
 							<div class="contact_info_content">
 								<ul>
-									<li>Address: 1481 Creekside Lane Avila Beach, CA 93424</li>
-									<li>Phone: +53 345 7953 32453</li>
-									<li>Email: miloThemes@gmail.com</li>
-								</ul>
-							</div>
-							<div class="contact_info_social">
-								<ul>
-									<li><a href="#"><i class="fa fa-google-plus" aria-hidden="true"></i></a></li>
-									<li><a href="#"><i class="fa fa-pinterest" aria-hidden="true"></i></a></li>
-									<li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-									<li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+									<li>Name: <b>Saran Akkiraju</b></li>
+									<li>Class ID: 2</li>
+									<li>Email: saf2k@mail.umkc.edu</li>
 								</ul>
 							</div>
 						</div>
 					</div>
-				</div>
-				<div class="col-lg-7">
-					<div class="contact_form_container">
-						<form action="#" id="contact_form" class="clearfix">
-							<input id="contact_input_name" class="contact_input contact_input_name" type="text" placeholder="Name" required="required" data-error="Name is required.">
-							<input id="contact_input_email" class="contact_input contact_input_email" type="text" placeholder="E-mail" required="required" data-error="E-mail is required.">
-							<input id="contact_input_subject" class="contact_input contact_input_subject" type="text" placeholder="Subject">
-							<textarea id="contact_input_message" class="contact_message_input contact_input_message" name="message" placeholder="Message" required="required" data-error="Please, write us a message."></textarea>
-							<button id="contact_send_btn" type="submit" class="contact_send_btn trans_200" value="Submit">Send</button>
-						</form>
+
+					<div class="contact_info">
+						<div class="contact_info_box">i</div>
+						<div class="contact_info_container">
+							<div class="contact_info_content">
+								<ul>
+									<li>Name: <b>Harish Tata</b></li>
+									<li>Class ID: 50</li>
+									<li>Email: hthnv@mail.umkc.edu</li>
+								</ul>
+							</div>
+						</div>
 					</div>
+					<div class="contact_info">
+						<div class="contact_info_box">i</div>
+						<div class="contact_info_container">
+							<div class="contact_info_content">
+								<ul>
+									<li>Name: <b>Masthan Krishna Neeraj Padarthi</b></li>
+									<li>Class ID: 37</li>
+									<li>Email: nmpxr@mail.umkc.edu</li>
+								</ul>
+							</div>
+						</div>
+					</div>
+
+					<div class="contact_info">
+						<div class="contact_info_box">i</div>
+						<div class="contact_info_container">
+							<div class="contact_info_content">
+								<ul>
+									<li>Name: <b>Pallavi Desai</b></li>
+									<li>Class ID: 62</li>
+									<li>Email: pd2qd@mail.umkc.edu</li>
+								</ul>
+							</div>
+						</div>
+					</div>
+
 				</div>
 			</div>
 			<div class="row contact_map">
@@ -149,28 +169,6 @@
 			</div>
 		</div>
 	</div>
-
-	<!-- Newsletter -->
-
-
-
-	<!-- Footer -->
-
-	<footer class="footer">
-		<div class="container">
-			<div class="row">
-
-				<!-- Footer Column -->
-
-
-				<!-- Footer Column -->
-
-				<!-- Footer Column -->
-
-
-			</div>
-		</div>
-	</footer>
 </div>
 
 <script src="js/jquery-3.2.1.min.js"></script>
