--- a/SourceCode/index.html
+++ b/SourceCode/index.html
@@ -37,7 +37,7 @@
 						<div class="logo_container">
 							<div class="logo">
 								<!--<div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Travel Explorer</div>-->
-								<div class="logo_image"><img src="images/tile-wide.png" alt=""></div>
+								<div class="logo_image"><img src="images/Travel_Explorer.png" alt=""></div>
 								<br>
 								<div>Make memories around the world</div>
 
