--- a/SourceCode/about.html
+++ b/SourceCode/about.html
@@ -27,7 +27,7 @@
 						<div class="logo_container">
 							<div class="logo">
 								<!--<div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Travel Explorer</div>-->
-								<div class="logo_image"><img src="images/tile-wide.png" alt=""></div>
+								<div class="logo_image"><img src="images/Travel_Explorer.png" alt=""></div>
 								<br>
 								<div>Make memories around the world</div>
 
@@ -94,17 +94,15 @@
 		<div class="container">
 			<div class="row">
 				<div class="col">
-					<div class="section_title text-center">
-						<h2>We are an award winning Agency</h2>
-						<div>take a look at our story</div>
-					</div>
 				</div>
 			</div>
 			<div class="row about_row">
 				<div class="col-lg-6 about_col order-lg-1 order-2">
 					<div class="about_content">
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce fringilla lectus nec diam auctor, ut fringilla diam sagittis. Quisque vel est id justo faucibus dapibus id a nibh. Aenean suscipit consequat lacus, sit amet mollis nulla. Morbi sagittis orci id lacus convallis tempus eget sit amet metus. Sed finibus, magna at euismod aliquet, enim justo vulputate lorem, sit amet elementum dolor eros sollicitudin dui. Sed ac magna mauris. Nullam lectus odio, viverra vel mi id, interdum imperdiet nulla. </p>
-						<div class="button about_button"><a href="#">Read More</a></div>
+						<p> Are you making plans for visiting a place? A fun trip with family and friends? Not sure of the places to Visit?
+						Worried about the budget and the best plan for the trip? Don't worry we are here to help you. Give us the destination that you
+						want to visit, length of travel, budget and interests we would give you set of best plans under the budget that you
+						expect.</p>
 					</div>
 				</div>
 				<div class="col-lg-6 about_col order-lg-2 order-1">
