--- a/SourceCode/RegisterPage.html
+++ b/SourceCode/RegisterPage.html
@@ -165,6 +165,7 @@
                 var username=document.getElementById("uName").value;
                 var password=document.getElementById('pass').value;
                 localStorage.setItem(username,password);
+                finalErrorDiv.innerHTML = 'Registration Succesfull';
 				window.open("LoginPage.html", "_self");
             }
         }
