--- a/SourceCode/about.html
+++ b/SourceCode/about.html
@@ -63,33 +63,39 @@
 
 	<!-- Home -->
 
-	<div class="home">
-		<!-- Image by https://unsplash.com/@peecho -->
-		<div class="home_background parallax-window" data-parallax="scroll" data-image-src="images/tst2.jpg" data-speed="0.8"></div>
-		<div class="container">
-			<div class="row">
-				<div class="col">
-					<div class="home_content">
-						<div class="home_content_inner">
-							<div class="home_title">About us</div>
-							<div class="home_breadcrumbs">
-								<ul class="home_breadcrumbs_list">
-									<li class="home_breadcrumb"><a href="index.html">Home</a></li>
-									<li class="home_breadcrumb">About us</li>
-								</ul>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>		
-	</div>
 
 	<!-- Find Form -->
 
 
 	<!-- About -->
 
+	<div class="milestones">
+		<div class="milestones_background parallax-window" data-parallax="scroll" data-image-src="images/fact_background.jpg" data-speed="0.8"></div>
+		<div class="container">
+			<div class="row">
+				<div class="col">
+					<div class="section_title text-center">
+					<br>
+					<br>
+						<h2>Welcome to Travel Explorer</h2>
+						<div>About Us</div>
+					</div>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-lg-8 offset-lg-2">
+					<div class="milestones_text">
+						<p>Are you making plans for visiting a place? A fun trip with family and friends? Not sure of the places to Visit?
+						Worried about the budget and the best plan for the trip? Don't worry we are here to help you. Give us the destination that you
+						want to visit, length of travel, budget and interests we would give you set of best plans under the budget that you
+						expect</p>
+					</div>
+				</div>
+					
+			</div>
+
+		</div>
+	</div>
 	<div class="about">
 		<div class="container">
 			<div class="row">
@@ -99,10 +105,7 @@
 			<div class="row about_row">
 				<div class="col-lg-6 about_col order-lg-1 order-2">
 					<div class="about_content">
-						<p> Are you making plans for visiting a place? A fun trip with family and friends? Not sure of the places to Visit?
-						Worried about the budget and the best plan for the trip? Don't worry we are here to help you. Give us the destination that you
-						want to visit, length of travel, budget and interests we would give you set of best plans under the budget that you
-						expect.</p>
+						<p> This is the project developed by UMKC Students, as part of Curriculum.This web page provides you with a felicitous plan by taking your input like budget, duration and interests. You will have to select interests like adventurous, pilgrimages, scenic, cultural. You will be getting plan that is within budget and covers all your interests.</p>
 					</div>
 				</div>
 				<div class="col-lg-6 about_col order-lg-2 order-1">
