--- a/SourceCode/contact.html
+++ b/SourceCode/contact.html
@@ -56,28 +56,6 @@
 
 	<!-- Home -->
 
-	<div class="home">
-		<!-- Image by https://unsplash.com/@peecho -->
-		<div class="home_background parallax-window" data-parallax="scroll" data-image-src="images/tst2.jpg" data-speed="0.8"></div>
-		<div class="container">
-			<div class="row">
-				<div class="col">
-					<div class="home_content">
-						<div class="home_content_inner">
-							<div class="home_title">Contact</div>
-							<div class="home_breadcrumbs">
-								<ul class="home_breadcrumbs_list">
-									<li class="home_breadcrumb"><a href="index.html">Home</a></li>
-									<li class="home_breadcrumb">Contact</li>
-								</ul>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>		
-	</div>
-
 	<!-- Find Form -->
 
 	<div class="find">
@@ -86,26 +64,21 @@
 		<!-- <div class="find_background parallax-window" data-parallax="scroll" data-image-src="images/find.jpg" data-speed="0.8"></div> -->
 
 	</div>
-
-	<!-- Contact -->
-
-	<div class="contact">
+	
+		<div class="newsletter">
+		<!-- Image by https://unsplash.com/@garciasaldana_ -->
+		<div class="newsletter_background" style="background-image:url(images/newsletter.jpg)"></div>
 		<div class="container">
-			<div class="row">
-				<div class="col">
-					<div class="contact_title">Get in touch</div>
-					<div class="contact_subtitle">say hello</div>
-				</div>
-			</div>
+
 			<div class="row contact_content">
 				<div class="col-lg-5">
-					<div class="contact_text">
-						<p></p>
+					<div class="contact_subtitle">
+						<p>Contact us !. Get in Touch with us :)</p>
 					</div>
 					<div class="contact_info">
 						<div class="contact_info_box">i</div>
 						<div class="contact_info_container">
-							<div class="contact_info_content">
+							<div class="contact_subtitle">
 								<ul>
 									<li>Name: <b>Saran Akkiraju</b></li>
 									<li>Class ID: 2</li>
@@ -118,7 +91,7 @@
 					<div class="contact_info">
 						<div class="contact_info_box">i</div>
 						<div class="contact_info_container">
-							<div class="contact_info_content">
+							<div class="contact_subtitle">
 								<ul>
 									<li>Name: <b>Harish Tata</b></li>
 									<li>Class ID: 50</li>
@@ -130,7 +103,7 @@
 					<div class="contact_info">
 						<div class="contact_info_box">i</div>
 						<div class="contact_info_container">
-							<div class="contact_info_content">
+							<div class="contact_subtitle">
 								<ul>
 									<li>Name: <b>Masthan Krishna Neeraj Padarthi</b></li>
 									<li>Class ID: 37</li>
@@ -143,7 +116,7 @@
 					<div class="contact_info">
 						<div class="contact_info_box">i</div>
 						<div class="contact_info_container">
-							<div class="contact_info_content">
+							<div class="contact_subtitle">
 								<ul>
 									<li>Name: <b>Pallavi Desai</b></li>
 									<li>Class ID: 62</li>
@@ -167,8 +140,14 @@
 				</div>
 
 			</div>
+		
+		
+		
 		</div>
 	</div>
+
+	<!-- Contact -->
+
 </div>
 
 <script src="js/jquery-3.2.1.min.js"></script>
