--- a/SourceCode/LoginPage.html
+++ b/SourceCode/LoginPage.html
@@ -5,7 +5,6 @@
     <title>Login Page</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/tst.css">
-	<!---->
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular.min.js"></script>
 	<script src="js/FacebookScript.js"></script>
 	<link href="css/font-awesome.css" rel="stylesheet">
@@ -65,22 +64,25 @@
 <div class="bg-class">
 	<!--<img class="img-responsive" src="tst1.jpg" width=100%>-->
 <center>
-<div class="col-md-4 col-md-offset-4">
+<div class="col-md-4 col-md-offset-4" ng-app="demoMongo" ng-controller="getController">
     <div class="box-content profile">
         <h3 class="widget-title">Login Page</h3>
         <form class="contact-form simple-form">
             <fieldset>
-                <p><input type="text" style="width: 100%; left:35%; position: relative" id="myusername" placeholder="User Name" required ></p>
+                <p><input type="text" style="width: 100%; left:35%; position: relative" id="myusername" ng-model="uname" placeholder="User Name" required ></p>
 				<br>
-                <input type="password" style="width: 100%; left:35%; position: relative" id="mypassword" placeholder="Password" required>
+                <input type="password" style="width: 100%; left:35%; position: relative" id="mypassword" ng-model="password" placeholder="Password" required>
                 <br>
 				<br>
                 <input type="button" class="button" style="padding:9px 18px; left: 37%;position: relative"
-                       value="Login" onclick="myFunction()">
+                       value="Login"
+					   ng-click="getDbData()">
             </fieldset>
         </form>
-		<div id="finalError" class="error-fields"></div>
-		<div class="form-group"> 
+		<!--<div id="finalError" class="error-fields"></div>-->
+		<!--<span ng-model="finalError" class="error-fields"></span>-->
+        <input type="text"  style="width: 100% ;border: 0px; background-color: #F5F5F5; color: red" ng-model="finalErr">
+        <div class="form-group">
 			<div class="col-md-12 control"> 
 				<div class="no-acc"> 
 					Don't have an account! 
@@ -105,4 +107,5 @@
 </div>
 </center></div>
 </body>
+<script src="js/app.js"></script>
 </html>
