Committing the google places api req code link:- https://developers.google.com/places/web-service/search .

--- a/SourceCode/index.html
+++ b/SourceCode/index.html
@@ -112,8 +112,9 @@
 							</div>
 							<div class="find_item">
 								<div>Interest</div>
-								<select name="max_price" id="max_price" class="dropdown_item_select find_input">
+								<select name="interest" id="interest" class="dropdown_item_select find_input">
 									<option>Select</option>
+                                    <option>Museum</option>
 									<option>Adventure</option>
 									<option>Devotional</option>
 									<option>Scenic</option>
