--- a/SourceCode/index.html
+++ b/SourceCode/index.html
@@ -112,7 +112,7 @@
 							</div>
 							<div class="find_item">
 								<div>Interest</div>
-								<select name="max_price" id="max_price" class="dropdown_item_select find_input">
+								<select name="interest" id="interest" class="dropdown_item_select find_input">
 									<option>Select</option>
 									<option>Adventure</option>
 									<option>Devotional</option>
