-Added Placesearch api which has the implementation of google places search . -When you give the place name it will give the details about the place -So you have to add the point_of_interest as a parameter into the url -you can get the places list when you give the above parameter -Give the type input filter into the url to get the places according to that type.

--- a/SourceCode/index.html
+++ b/SourceCode/index.html
@@ -12,7 +12,7 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular.min.js" type="application/javascript"></script>
 	<script src="js/FacebookScript.js"></script>
 	<script src="js/FaceBookLogout.js"></script>
-	<script src="js/KnowledgeGraphAPI.js"></script>
+	<script src="js/PlaceSearch.js"></script>
 	<link rel="stylesheet" type="text/css" href="styles/bootstrap4/bootstrap.min.css">
 	<link href="plugins/font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 	<link rel="stylesheet" type="text/css" href="plugins/OwlCarousel2-2.2.1/owl.carousel.css">
@@ -112,8 +112,9 @@
 							</div>
 							<div class="find_item">
 								<div>Interest</div>
-								<select name="max_price" id="max_price" class="dropdown_item_select find_input">
+								<select name="interest" id="interest" class="dropdown_item_select find_input">
 									<option>Select</option>
+									<option>Museum</option>
 									<option>Adventure</option>
 									<option>Devotional</option>
 									<option>Scenic</option>
